--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -10,7 +10,6 @@
   min-width: 40%;
   max-width: 40%;
   font-family: 'Balsamiq Sans', cursive;
-
 }
 
 .title{
@@ -19,4 +18,20 @@
 
 h5{
   font-size: 15px;
+}
+
+@media screen and (max-width:720px) {
+  .recipe{
+    border-radius: 10px;
+    box-shadow: 0px 5px 20px rgb(71,71,71);
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: white;
+    align-items: center;
+    min-width: 90%;
+    max-width: 50%;
+    font-family: 'Balsamiq Sans', cursive;
+  }
 }
